# ms-swift-BeFM

./: .gitignore  pyproject.toml
slurm_scripts/: copy_models_to_turbo.sh  eval_llama3_70b_gsm8k.sh  eval_qwen3_4b_gsm8k.sh  eval_qwen3_4b_gsm8k_4gpu.sh  setup_megatron_env_slurm.sh  train_llama3_70b_lora.sh  train_qwen3_30b_moe_megatron.sh  train_qwen3_30b_moe_megatron_lora.sh  train_qwen3_4b_lora.sh
slurm_scripts/befm_general/: chat_befm_8b.sh  chat_befm_8b_interactive.sh  test_befm_70b_batch.sh  test_befm_8b_batch.sh
